--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ steps_prepare_testing_docker: &steps_prepare_testing_docker
     - run: "docker load -i  << pipeline.parameters.workspace-engine-image-path >>"
     - run: "docker load -i  << pipeline.parameters.workspace-files-artifacts-expander-image-path >>"
     - run: | 
-        source << pipeline.parameters.workspace-constants-path>>"
+        source << pipeline.parameters.workspace-constants-path>>
         ${KURTOSIS_BINPATH} engine start --cli-log-level trace --version ${CORE_ENGINE_VERSION_TAG}
 
 # Run steps to dump kurtosis enclaves from docker
