--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,16 +61,17 @@ run_dump_kurtosis_enclaves: &run_dump_kurtosis_enclaves
 
 # Run pre-release scripts so that everything has the same -dirty version
 checkout_and_run_release_scripts_if_code_change: &checkout_and_run_release_scripts_if_code_change
-  - run: |
-      if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
-        circleci-agent step halt
-      fi
-  - run: |
-      echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-      sudo apt update
-      sudo apt install kudet
-  - checkout
-  - run: "<<pipeline.parameters.run-pre-release-scripts-script-path>>"
+  steps:
+    - run: |
+        if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
+          circleci-agent step halt
+        fi
+    - run: |
+        echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+        sudo apt update
+        sudo apt install kudet
+    - checkout
+    - run: "<<pipeline.parameters.run-pre-release-scripts-script-path>>"
 
 
 ##############
@@ -228,7 +229,7 @@ jobs:
       - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
       # Install Kudet
-      - << : *checkout_and_run_release_scripts_if_code_change
+      - <<: *checkout_and_run_release_scripts_if_code_change
 
       - setup_remote_docker:
           version: "<< pipeline.parameters.docker-engine-version>>"
@@ -272,7 +273,7 @@ jobs:
     docker:
       - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
-      - << : *checkout_and_run_release_scripts_if_code_change
+      - <<: *checkout_and_run_release_scripts_if_code_change
 
       - setup_remote_docker:
           version: "<< pipeline.parameters.docker-engine-version>>"
@@ -330,7 +331,7 @@ jobs:
     docker:
       - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
-      - << : *checkout_and_run_release_scripts_if_code_change
+      - <<: *checkout_and_run_release_scripts_if_code_change
 
       - setup_remote_docker:
           version: "<< pipeline.parameters.docker-engine-version>>"
