--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ steps_prepare_testing_k8s: &steps_prepare_testing_k8s
 steps_prepare_testing_docker: &steps_prepare_testing_docker
   steps:
     - run: |
-        docker load -i  << pipeline.parameters.workspace-engine-image-path >>
-        docker load -i  << pipeline.parameters.workspace-core-image-path >>
-        docker load -i  << pipeline.parameters.workspace-files-artifacts-expander-image-path
+        docker load -i  "<< pipeline.parameters.workspace-with-cli-binary-and-images-mountpoint >>/<< pipeline.parameters.workspace-engine-image-path >>"
+        docker load -i  "<< pipeline.parameters.workspace-with-cli-binary-and-images-mountpoint >>/<< pipeline.parameters.workspace-core-image-path >>"
+        docker load -i  "<< pipeline.parameters.workspace-with-cli-binary-and-images-mountpoint >>/<< pipeline.parameters.workspace-files-artifacts-expander-image-path >>"
     - run: "${KURTOSIS_BINPATH} engine start --cli-log-level trace"
 
 # Run steps to dump kurtosis enclaves from docker
