--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,11 +1,15 @@
 name: golangci-lint
-on: [push, pull_request]
-permissions:
-  contents: read
-  pull-requests: read
+
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+
+
 jobs:
   golangci:
-    name: lint
+    name: golang-lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v3
@@ -15,6 +19,4 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.31
-          args: --issues-exit-code=0
-      - run: golangci-lint run --no-config cipher
+          version: latest
