--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,38 +21,46 @@ jobs:
         with:
           version: latest
           working-directory: container-engine-lib/
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-api-golang
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: api/golang/
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-core-server
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: core/server
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-core-launcher
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: core/launcher/
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-engine-server
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: engine/server/
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-engine-launcher
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: engine/launcher/
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-internal-test-suites
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: internal_testsuites/golang/
+          args: --timeout=3m --issues-exit-code=0
       - name: lint-cli
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           working-directory: cli/cli/
+          args: --timeout=3m --issues-exit-code=0 
