--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -8,6 +8,8 @@ on:
 
 
 jobs:
+  strategy:
+    fail-fast: false
   golangci:
     name: golang-lint
     runs-on: ubuntu-latest
@@ -63,4 +65,4 @@ jobs:
         with:
           version: latest
           working-directory: cli/cli/
-          args: --timeout=3m --issues-exit-code=0 
+          args: --timeout=3m --issues-exit-code=0
