--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -12,6 +12,7 @@ jobs:
     name: golang-lint
     runs-on: ubuntu-latest
     steps:
+      - run:  go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
       - uses: actions/setup-go@v3
         with:
           go-version: 1.17
