make go env setting a part of a step

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -16,7 +16,6 @@ jobs:
         with:
           go-version: 1.17
       - uses: actions/checkout@v3
-      - run:  go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
       - name: lint-container-engine-lib
         uses: golangci/golangci-lint-action@v3
         with:
@@ -25,6 +24,7 @@ jobs:
           args: --timeout=3m --issues-exit-code=0
       - name: lint-api-golang
         uses: golangci/golangci-lint-action@v3
+        run:  go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
         with:
           version: latest
           working-directory: api/golang/
