--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,48 +21,48 @@ jobs:
       - name: lint-container-engine-lib
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: container-engine-lib/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-api-golang
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: api/golang/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-core-launcher
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: core/launcher/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-engine-server
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: engine/server/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-engine-launcher
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: engine/launcher/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-internal-test-suites
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: internal_testsuites/golang/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-cli
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: cli/cli/
           args: --timeout=3m --issues-exit-code=0
       - name: lint-core-server
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.49.0
           working-directory: core/server
           args: --timeout=3m --issues-exit-code=0
