uses realeaser token

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -16,8 +16,11 @@ jobs:
         with:
           go-version: 1.17
       - uses: actions/checkout@v3
+      - name: Configure git for private modules
+        env:
+          RELEASER_TOKEN: ${{ secrets.RELEASER_TOKEN }}
+        run:  git config --global url."https://${RELEASER_TOKEN}@github.com/".insteadOf "https://github.com/"
       - run:  go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
-      - run:  go env
       - name: lint-container-engine-lib
         uses: golangci/golangci-lint-action@v3
         with:
